kubernetes/apps/observability/kubernetes-dashboard/app/release.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-dash
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kube-dash.internal
spec:
  ports:
    - name: http
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app.kubernetes.io/component: kubernetes-dashboard
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kubernetes-dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: observability-oauth2@kubernetescrd
    # traefik.ingress.kubernetes.io/router.middlewares: network-oidc-auth@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host kubernetes-dashboard.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-dash
                port:
                  number: 9090
  tls:
    - hosts:
        - *host
      secretName: icylair-com-all-prod
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2
spec:
  forwardAuth:
    address: https://kubernetes-dashboard.cloud.icylair.com/oauth2/auth
    authResponseHeaders:
      - Authorization

# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: oauth2
# spec:
#   forwardAuth:
#     address: https://kubernetes-dashboard.cloud.icylair.com/oauth2/auth
#     authResponseHeaders:
#       - Authorization
#     #   - "X-Forwarded-User"
#     # authRequestHeaders:
#     #   - Authorization
#     # trustForwardHeader: true
